--- a/show.html
+++ b/show.html
@@ -16,14 +16,14 @@
       function showMessage() {
         alert("Xin chào");
       }
-      function message(){
-        document.getElementById('message').innerHTML = 'Xin chào';
+      function message() {
+        document.getElementById("message").innerHTML = "Xin chào";
       }
-      function messWrite(){
-        document.write('Xin chào');
+      function messWrite() {
+        document.write("Xin chào");
       }
-      function messLog(){
-        console.log('Xin chào')
+      function messLog() {
+        console.log("Xin chào");
       }
     </script>
   </body>
